--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,7 @@
 			"run_at": "document_start",
 			"js": [
 				"index.js",
+				"lib/browser-polyfill/chrome-browser-polyfill.js",
 				"lib/hooks/content/content-hooks-frames.js",
 				"lib/single-file/single-file-helper.js",
 				"lib/frame-tree/content/content-frame-tree.js"
@@ -49,6 +50,7 @@
 	"background": {
 		"scripts": [
 			"index.js",
+			"lib/browser-polyfill/chrome-browser-polyfill.js",
 			"lib/fetch/bg/fetch-resources.js",
 			"lib/fetch/content/content-fetch-resources.js",
 			"lib/frame-tree/bg/frame-tree.js",
