added option to include the infobar in saved pages

--- a/manifest.json
+++ b/manifest.json
@@ -55,6 +55,7 @@
 			"extension/core/bg/compression.js",
 			"extension/core/bg/downloads.js",
 			"extension/core/bg/autosave.js",
+			"extension/core/bg/infobar.js",
 			"extension/ui/bg/ui-main.js",
 			"extension/ui/bg/ui-menus.js",
 			"extension/ui/bg/ui-commands.js",
