--- a/manifest.json
+++ b/manifest.json
@@ -56,6 +56,7 @@
 			"extension/core/bg/downloads.js",
 			"extension/core/bg/autosave.js",
 			"extension/core/bg/infobar.js",
+			"extension/core/bg/devtools.js",
 			"extension/ui/bg/ui-main.js",
 			"extension/ui/bg/ui-menus.js",
 			"extension/ui/bg/ui-commands.js",
@@ -133,6 +134,7 @@
 			"id": "{e4db92bc-3213-493d-bd9e-5ff2afc72da6}"
 		}
 	},
+	"devtools_page": "extension/ui/devtools/devtools.html",
 	"incognito": "spanning",
 	"manifest_version": 2,
 	"default_locale": "en"
