--- a/manifest.json
+++ b/manifest.json
@@ -51,7 +51,6 @@
 	"background": {
 		"scripts": [
 			"lib/index.js",
-			"lib/zip/zip.js",
 			"lib/single-file/vendor/css-minifier.js",
 			"lib/single-file/vendor/css-tree.js",
 			"lib/single-file/vendor/css-media-query-parser.js",
@@ -77,6 +76,7 @@
 			"extension/lib/fetch/bg/fetch-resources.js",
 			"extension/lib/frame-tree/bg/frame-tree.js",
 			"extension/lib/lazy/bg/lazy-timeout.js",
+			"extension/lib/zip/zip.js",
 			"extension/core/bg/config.js",
 			"extension/core/bg/tabs-data.js",
 			"extension/core/bg/business.js",
