--- a/manifest.json
+++ b/manifest.json
@@ -82,6 +82,7 @@
 			"extension/lib/single-file/frame-tree/bg/frame-tree.js",
 			"extension/lib/single-file/lazy/bg/lazy-timeout.js",
 			"extension/lib/zip/zip.js",
+			"extension/lib/gdrive/gdrive.js",
 			"extension/core/bg/config.js",
 			"extension/core/bg/tabs-data.js",
 			"extension/core/bg/business.js",
@@ -138,13 +139,23 @@
 		"lib/single-file/processors/hooks/content/content-hooks-web.js",
 		"lib/single-file/processors/hooks/content/content-hooks-frames-web.js"
 	],
+	"oauth2": {
+		"client_id": "7544745492-ig6uqhua0ads4jei52lervm1pqsi6hot.apps.googleusercontent.com",
+		"scopes": [
+			"https://www.googleapis.com/auth/drive.file"
+		]
+	},
 	"permissions": [
+		"identity",
 		"menus",
 		"contextMenus",
 		"downloads",
 		"storage",
 		"tabs",
 		"<all_urls>"
+	],
+	"optional_permissions": [
+		"identity"
 	],
 	"applications": {
 		"gecko": {
