--- a/manifest.json
+++ b/manifest.json
@@ -102,8 +102,8 @@
 	"options_page": "extension/ui/pages/options.html",
 	"sidebar_action": {
 		"browser_style": true,
-		"default_title": "SingleFileZ options",
-		"default_panel": "extension/ui/pages/options.html#side-panel",
+		"default_title": "SingleFileZ",
+		"default_panel": "extension/ui/pages/panel.html",
 		"default_icon": "extension/ui/resources/icon_128.png",
 		"open_at_install": false
 	},
