--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
 				"lib/single-file/index.js",
 				"extension/lib/single-file/index.js",
 				"extension/lib/single-file/browser-polyfill/chrome-browser-polyfill.js",
+				"lib/single-file/vendor/css-unescape.js",
 				"lib/single-file/single-file-helper.js",
 				"lib/single-file/processors/hooks/content/content-hooks-frames.js",
 				"lib/single-file/processors/frame-tree/content/content-frame-tree.js"
