--- a/manifest.json
+++ b/manifest.json
@@ -94,6 +94,7 @@
 			"extension/core/bg/downloads.js",
 			"extension/core/bg/autosave.js",
 			"extension/core/bg/devtools.js",
+			"extension/core/bg/bookmarks.js",
 			"extension/ui/bg/ui-main.js",
 			"extension/ui/bg/ui-menus.js",
 			"extension/ui/bg/ui-commands.js",
@@ -157,7 +158,8 @@
 		"<all_urls>"
 	],
 	"optional_permissions": [
-		"identity"
+		"identity",
+		"bookmarks"
 	],
 	"applications": {
 		"gecko": {
