--- a/manifest.json
+++ b/manifest.json
@@ -85,6 +85,8 @@
 			"extension/lib/single-file/lazy/bg/lazy-timeout.js",
 			"extension/lib/zip/zip.js",
 			"extension/lib/gdrive/gdrive.js",
+			"extension/lib/vendor/protobuf/protobuf.js",
+			"extension/core/data/page-proto.js",
 			"extension/core/bg/config.js",
 			"extension/core/bg/tabs-data.js",
 			"extension/core/bg/business.js",
