--- a/manifest.json
+++ b/manifest.json
@@ -140,9 +140,10 @@
 			"description": "Save all tabs"
 		}
 	},
-	"web_accessible_resources": [
+	"web_accessible_resources": [		
 		"lib/single-file/processors/hooks/content/content-hooks-web.js",
-		"lib/single-file/processors/hooks/content/content-hooks-frames-web.js"
+		"lib/single-file/processors/hooks/content/content-hooks-frames-web.js",
+		"common/ui/content/content-infobar-web.js"
 	],
 	"oauth2": {
 		"client_id": "7544745492-ig6uqhua0ads4jei52lervm1pqsi6hot.apps.googleusercontent.com",
