remove creation of the"/out" directory

--- a/cli/Dockerfile
+++ b/cli/Dockerfile
@@ -1,8 +1,12 @@
 FROM zenika/alpine-chrome:with-node
 
-RUN npm install --production "gildas-lormeau/SingleFileZ#master" \
-    && mkdir out
+RUN npm install --production gildas-lormeau/SingleFileZ#master
 
 WORKDIR /usr/src/app/node_modules/single-filez/cli
 
-ENTRYPOINT ["./single-filez", "--browser-executable-path", "/usr/bin/chromium-browser", "--dump-content", "--output-directory", "/out", "--browser-args", "[\"--no-sandbox\"]"]
+ENTRYPOINT [ \
+    "./single-filez", \
+    "--browser-executable-path", "/usr/bin/chromium-browser", \
+    "--output-directory", "/out", \
+    "--browser-args", "[\"--no-sandbox\"]", \
+    "--dump-content" ]
