--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,9 @@
 			],
 			"run_at": "document_start",
 			"js": [
-				"extension/lib/single-file/browser-polyfill/chrome-browser-polyfill.js",
-				"lib/single-file/dist/single-file-frames.js"
+				"dist/chrome-browser-polyfill.js",
+				"dist/single-file-frames.js",
+				"dist/extension-frames.js"
 			],
 			"all_frames": true,
 			"match_about_blank": true
@@ -27,56 +28,15 @@
 			"matches": [
 				"<all_urls>"
 			],
-			"js": [
-				"common/ui/content/content-infobar-web.js"
-			]
-		},
-		{
-			"matches": [
-				"<all_urls>"
-			],
 			"run_at": "document_start",
 			"js": [
-				"lib/single-file/dist/single-file-bootstrap.js",
-				"extension/index.js",
-				"extension/core/index.js",
-				"extension/core/content/content-bootstrap.js"
+				"dist/single-file-bootstrap.js",
+				"dist/extension-bootstrap.js"
 			]
 		}
 	],
 	"background": {
-		"scripts": [
-			"extension/lib/single-file/browser-polyfill/chrome-browser-polyfill.js",
-			"lib/single-file/dist/single-file.js",
-			"common/index.js",
-			"common/ui/content/content-infobar.js",
-			"extension/index.js",
-			"extension/lib/single-file/index.js",
-			"extension/core/index.js",
-			"extension/ui/index.js",
-			"extension/lib/single-file/core/bg/scripts.js",
-			"extension/lib/single-file/fetch/content/content-fetch.js",
-			"extension/lib/single-file/fetch/bg/fetch.js",
-			"extension/lib/single-file/frame-tree/bg/frame-tree.js",
-			"extension/lib/single-file/lazy/bg/lazy-timeout.js",
-			"extension/lib/gdrive/gdrive.js",
-			"extension/lib/vendor/protobuf/protobuf.js",
-			"extension/core/data/page-proto.js",
-			"extension/core/bg/config.js",
-			"extension/core/bg/tabs-data.js",
-			"extension/core/bg/business.js",
-			"extension/core/bg/messages.js",
-			"extension/core/bg/tabs.js",
-			"extension/core/bg/downloads.js",
-			"extension/core/bg/autosave.js",
-			"extension/core/bg/devtools.js",
-			"extension/core/bg/bookmarks.js",
-			"extension/core/bg/requests.js",
-			"extension/ui/bg/ui-main.js",
-			"extension/ui/bg/ui-menus.js",
-			"extension/ui/bg/ui-commands.js",
-			"extension/ui/bg/ui-button.js"
-		],
+		"page": "extension/core/bg/background.html",
 		"persistent": false
 	},
 	"options_page": "extension/ui/pages/options.html",
@@ -116,9 +76,9 @@
 		}
 	},
 	"web_accessible_resources": [
-		"lib/single-file/processors/hooks/content/content-hooks-web.js",
-		"lib/single-file/processors/hooks/content/content-hooks-frames-web.js",
-		"common/ui/content/content-infobar-web.js"
+		"dist/web/hooks/hooks-web.js",
+		"dist/web/hooks/hooks-frames-web.js",
+		"dist/web/infobar-web.js"
 	],
 	"oauth2": {
 		"client_id": "7544745492-ig6uqhua0ads4jei52lervm1pqsi6hot.apps.googleusercontent.com",
