--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"yargs": "^17.1.1"
 	},
 	"devDependencies": {
-		"rollup": "^2.56.3",
-		"rollup-plugin-terser": "^7.0.2"
+		"rollup": "2.56.3",
+		"rollup-plugin-terser": "7.0.2"
 	}
 }
