--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
 		"64": "src/extension/ui/resources/icon_64.png",
 		"128": "src/extension/ui/resources/icon_128.png"
 	},
-	"version": "1.3.1",
+	"version": "1.3.2",
 	"description": "__MSG_extensionDescription__",
 	"content_scripts": [
 		{
@@ -87,6 +87,7 @@
 		"src/extension/lib/readability/Readability.js",
 		"src/extension/lib/readability/Readability-readerable.js",
 		"src/single-file/vendor/zip/zip.min.js",
+		"src/single-file/vendor/zip/z-worker.js",
 		"src/extension/ui/pages/editor-note-web.css",
 		"src/extension/ui/pages/editor-mask-web.css",
 		"src/extension/ui/pages/editor-frame-web.css"
