--- a/package.json
+++ b/package.json
@@ -6,17 +6,11 @@
 	"license": "AGPL-3.0-or-later",
 	"main": "cli/single-file-cli-api.js",
 	"bin": {
-		"single-file": "./cli/single-filez"
+		"single-filez": "./cli/single-filez"
 	},
 	"dependencies": {
-		"file-url": "3.0.0",
-		"iconv-lite": "0.6.3",
-		"jsdom": "19.0.0",
-		"puppeteer-core": "13.5.2",
-		"selenium-webdriver": "4.1.1",
 		"single-filez-core": "1.0.0",
-		"strong-data-uri": "1.0.6",
-		"yargs": "17.4.0"
+		"single-filez-cli": "1.0.3"
 	},
 	"devDependencies": {
 		"@rollup/plugin-node-resolve": "13.3.0",
