--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
 	"description": "SingleFileZ",
 	"author": "Gildas Lormeau",
 	"license": "AGPL-3.0-or-later",
+	"scripts": {
+		"dev": "npx rollup -c rollup.config.dev.js",
+		"build": "./build-extension.sh"
+	},
 	"bin": {
 		"single-filez": "./cli/single-filez"
 	},
