--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
 		"single-filez": "./cli/single-filez"
 	},
 	"dependencies": {
-		"single-filez-core": "1.0.18",
-		"single-filez-cli": "1.0.24"
+		"single-filez-core": "1.0.19",
+		"single-filez-cli": "1.0.25"
 	},
 	"devDependencies": {
-		"@rollup/plugin-node-resolve": "13.3.0",
-		"rollup": "2.75.5",
-		"rollup-plugin-terser": "^7.0.2"
-	}
+		"@rollup/plugin-node-resolve": "15.0.0",
+		"rollup": "2.79.1",
+		"rollup-plugin-terser": "7.0.2"
+	},
+    "overrides": {
+        "terser": "^5.15.0"
+    }
 }
